dockerAssgn/logs/dag_id=database_postgres/run_id=manual__2023-06-14T13:25:14.353467+00:00/task_id=create_table/attempt=1.log
[2023-06-14T13:25:15.054+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.create_table manual__2023-06-14T13:25:14.353467+00:00 [queued]>
[2023-06-14T13:25:15.060+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: database_postgres.create_table manual__2023-06-14T13:25:14.353467+00:00 [queued]>
[2023-06-14T13:25:15.060+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:25:15.061+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-06-14T13:25:15.061+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-06-14T13:25:15.074+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_table> on 2023-06-14 13:25:14.353467+00:00
[2023-06-14T13:25:15.079+0000] {standard_task_runner.py:55} INFO - Started process 90 to run task
[2023-06-14T13:25:15.082+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'database_postgres', 'create_table', 'manual__2023-06-14T13:25:14.353467+00:00', '--job-id', '15', '--raw', '--subdir', 'DAGS_FOLDER/postgress_db.py', '--cfg-path', '/tmp/tmp_8kw64hs']
[2023-06-14T13:25:15.083+0000] {standard_task_runner.py:83} INFO - Job 15: Subtask create_table
[2023-06-14T13:25:15.136+0000] {task_command.py:388} INFO - Running <TaskInstance: database_postgres.create_table manual__2023-06-14T13:25:14.353467+00:00 [running]> on host 649eec7cdf92
[2023-06-14T13:25:15.188+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=database_postgres
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-06-14T13:25:14.353467+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-14T13:25:14.353467+00:00
[2023-06-14T13:25:15.189+0000] {sql.py:254} INFO - Executing: CREATE TABLE IF NOT EXISTS my_table (
  id INT UNIQUE NOT NULL,
  current_time TIMESTAMP WITH ZONE DEFAULT CURRENT_TIMESTAMP
);
[2023-06-14T13:25:15.198+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:25:15.323+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-06-14T13:25:15.328+0000] {sql.py:375} INFO - Running statement: CREATE TABLE IF NOT EXISTS my_table (
  id INT UNIQUE NOT NULL,
  current_time TIMESTAMP WITH ZONE DEFAULT CURRENT_TIMESTAMP
);, parameters: None
[2023-06-14T13:25:15.330+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "current_time"
LINE 3:   current_time TIMESTAMP WITH ZONE DEFAULT CURRENT_TIMESTAMP
          ^

[2023-06-14T13:25:15.342+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=database_postgres, task_id=create_table, execution_date=20230614T132514, start_date=20230614T132515, end_date=20230614T132515
[2023-06-14T13:25:15.350+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 15 for task create_table (syntax error at or near "current_time"
LINE 3:   current_time TIMESTAMP WITH ZONE DEFAULT CURRENT_TIMESTAMP
          ^
; 90)
[2023-06-14T13:25:15.374+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-06-14T13:25:15.392+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
